# balatrollm

./: .envrc.example  .gitignore  .mdformat.toml  .yamlfmt  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  balatro.sh  index.html  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.json
.claude/commands/: commit.md  init-from-template.md
.github/: release-please-config.json
.github/workflows/: code-quality.yml  deploy-docs.yml  deploy_docs.yml  release-please.yml  release-pypi.yml  update-balatrobot-dependency.yml
.mux/: init  mcp.jsonc  tool_post
cli/: index.html  index.md
config/: community.yaml  example.yaml  litellm.yaml  models.yaml
contributing/: index.html  index.md
docs/: analysis.md  cli.md  contributing.md  index.md  installation.md  setup.md  strategies.md  usage.md
installation/: index.html  index.md
scripts/: balatro-linux.py  balatro-macos.py  balatro-windows.py
search/: search_index.json
src/balatrollm/: __init__.py  balatrobench_cli.py  balatrollm_cli.py  benchmark.py  bot.py  cli.py  client.py  collector.py  config.py  data_collection.py  executor.py  llm.py  strategies.py  strategy.py  templates.py  tools.json  views.py
src/balatrollm/strategies/aggressive/: MEMORY.md.jinja  STRATEGY.md.jinja  TOOLS.json  manifest.json
src/balatrollm/strategies/conservative/: GAMESTATE.md.jinja  MEMORY.md.jinja  STRATEGY.md.jinja  TOOLS.json  manifest.json
src/balatrollm/strategies/default/: GAMESTATE.md.jinja  MEMORY.md.jinja  STRATEGY.md.jinja  TOOLS.json  manifest.json
src/balatrollm/templates/: aggressive.md.jinja  game_state.md.jinja  system.md.jinja
src/balatrollm/templates/aggressive/: GAMESTATE.md.jinja  MEMORY.md.jinja  STRATEGY.md.jinja
src/balatrollm/templates/default/: MEMORY.md.jinja
src/balatrollm_old/: benchmark.py  bot.py  config.py  data_collection.py  strategies.py
src/balatrollm_old/strategies/aggressive/: STRATEGY.md.jinja  manifest.json
src/template_python/: __init__.py
strategies/: index.html  index.md
tests/: conftest.py  test_llm.py
tests/fixtures/: fixtures.json  generate.py
tests/integration/: __init__.py  conftest.py  test_client.py  test_strategy.py
tests/integration/fixtures/: fixtures.json  generate.py
tests/unit/: __init__.py  conftest.py  test_cli.py  test_client.py  test_collector.py  test_config.py  test_llm.py  test_strategy.py
tests/unit/fixtures/: fixtures.json  generate.py
views/: responses.html  task.html
