[project]
name = "balatrollm"
version = "0.13.2"
description = "LLM-powered bot that plays Balatro using strategic decision making"
readme = "README.md"
authors = [{ name = "S1M0N38", email = "bertolottosimone@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "jinja2>=3.1.6",
  "openai>=1.99.3",
  "httpx>=0.27.0",
  "pyyaml>=6.0.2",
  "balatrobot>=0.7.2",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/coder/balatrollm"
Issues = "https://github.com/coder/balatrollm/issues"
Repository = "https://github.com/coder/balatrollm"
Changelog = "https://github.com/coder/balatrollm/blob/main/CHANGELOG.md"

[project.scripts]
balatrollm = "balatrollm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
publish-url = "https://upload.pypi.org/legacy/"

# [tool.uv.sources]
# balatrobot = { git = "https://github.com/coder/balatrobot.git", rev = "render-on-api" }
# # Or use local balatrobot for local development
# # balatrobot = { path = "/root/.config/love/Mods/balatrobot", editable = false }

[tool.ruff]
exclude = [".venv", "balatrobot", "balatro"]
lint.extend-select = ["I"]
lint.task-tags = ["FIX", "TODO", "HACK", "WARN", "PERF", "NOTE", "TEST"]

[tool.basedpyright]
exclude = ["**/__pycache__", ".venv", "balatrobot", "balatro"]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
  "basedpyright>=1.31.1",
  "mdformat>=0.7.22",
  "mdformat-footnote>=0.1.1",
  "mdformat-frontmatter>=2.0.8",
  "mdformat-gfm>=0.4.1",
  "mdformat-gfm-alerts>=2.0.0",
  "mdformat-mkdocs>=4.3.0",
  "mdformat-simple-breaks>=0.0.1",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.6.15",
  "mkdocs-llmstxt>=0.3.0",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.14.1",
]
