[project]
name = "balatrollm"
version = "1.0.0"
description = "LLM-powered bot that plays Balatro using strategic decision making"
readme = "README.md"
authors = [{ name = "S1M0N38", email = "bertolottosimone@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "jinja2>=3.1.6",
  "openai>=1.99.3",
  "pyyaml>=6.0.2",
  "httpx>=0.28.1",
  "balatrobot>=1.2.2",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
balatrollm = "balatrollm.cli:main"

[project.urls]
Homepage = "https://github.com/coder/balatrollm"
Issues = "https://github.com/coder/balatrollm/issues"
Repository = "https://github.com/coder/balatrollm"
Changelog = "https://github.com/coder/balatrollm/blob/main/CHANGELOG.md"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [".venv", "balatrobot", "balatro"]
lint.extend-select = ["I"]
lint.task-tags = ["FIX", "TODO", "HACK", "WARN", "PERF", "NOTE", "TEST"]

# [tool.uv.sources]
# balatrobot = { git = "https://github.com/coder/balatrobot.git", rev = "main" }
# Or use local balatrobot for local development
# balatrobot = { path = "../balatrobot", editable = true }

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "dev: marks tests that are currently developed",
  "integration: marks integration tests that actually start Balatro (deselect with '-m \"not integration\"')",
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"


[dependency-groups]
test = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "respx>=0.22.0",
]
dev = [
  "commitizen>=4.11.0",
  "mdformat>=0.7.22",
  "mdformat-footnote>=0.1.1",
  "mdformat-frontmatter>=2.0.8",
  "mdformat-gfm>=0.4.1",
  "mdformat-gfm-alerts>=2.0.0",
  "mdformat-mkdocs>=4.3.0",
  "mdformat-simple-breaks>=0.0.1",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.6.15",
  "mkdocs-llmstxt>=0.3.0",
  "ruff>=0.14.1",
  "ty>=0.0.8",
]
